--- a/style.css
+++ b/style.css
@@ -9,10 +9,20 @@ body * {
 }
 
 body {
-  background-image: linear-gradient(150deg, #0F2B05, #000000);
+  background-image: linear-gradient(45deg, #174108, #000000);
   height: 100vh;
 
   text-align: center;
+
+  transition: all 0.3s ease;
+}
+
+body.blue {
+  background-image: linear-gradient(45deg, #373d98, #000000);
+  height: 100vh;
+
+  text-align: center;
+  transition: all 0.3s ease;
 }
 
 header {
@@ -23,7 +33,7 @@ header {
   width: 354px;
   height: 508px;
 
-  background-image: url(assets/bg-explorer.svg);
+  background-image: url(assets/bg-ignite.svg);
   background-repeat: no-repeat;
 
   display: inline-block;
@@ -31,7 +41,15 @@ header {
   user-select: none;
 
   transition: all 0.3s ease;
+
+
+  margin-bottom: 1rem;
 }
+
+.card:hover {
+  rotate: 5deg;
+}
+
 
 .card img {
   width: 150px;
@@ -43,6 +61,8 @@ header {
   border: 4px solid #f7dd43;
 
   margin-top: 115px;
+
+
 
 }
 
@@ -86,40 +106,56 @@ button {
 
 .green {
   background-color: #185b34;
+  margin-right: 1rem;
 
 }
 
 .green.clicked {
   background-color: #185b34;
   border: 2px solid #f7dd43;
+  box-shadow: 0 5px 15px 0px rgba(25, 160, 13, 0.2);
 }
 
 .blue {
   background-color: #373d98;
+
 }
 
 .blue.clicked {
   background-color: #373d98;
   border: 2px solid #f7dd43;
+  box-shadow: 0 5px 15px 0px rgba(0, 4, 250, 0.2);
 }
 
 
 /* animation */
 
+.logo {
+  animation: fromTop 0.5s ease-in-out backwards;
+  animation-delay: 0.2s;
+}
+
 .card {
   animation: fromTop 0.5s ease-in-out backwards;
+  animation-delay: 0.6s;
+}
+
+#green {
+  animation: fromBotton 0.8s ease-in-out backwards;
   animation-delay: 0.4s;
 }
 
-.buttons {
-  animation: fromBotton 0.5s ease-in-out backwards;
-  animation-delay: 0.4s;
+#blue {
+  animation: fromBotton 1s ease-in-out backwards;
+  animation-delay: 0.5s;
 }
+
+
 
 @keyframes fromTop {
   from {
     opacity: 0;
-    transform: translateY(-200px);
+    transform: translateY(-100px);
   }
 
   to {
@@ -129,9 +165,14 @@ button {
 }
 
 @keyframes fromBotton {
-  from {
+  0% {
     opacity: 0;
     transform: translateY(200px);
+  }
+
+  50% {
+    opacity: 1;
+    transform: translateY(-20px);
   }
 
   to {
