--- a/style.css
+++ b/style.css
@@ -41,8 +41,7 @@ header {
 
   user-select: none;
 
-  transition: all 0.3s ease;
-
+  transition: all 0.5s ease-in-out;
 
   margin-bottom: 1rem;
 }
